apps/wesley-site/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wesley-site
spec:
  template:
    spec:
      containers:
        - name: wesley-site
          image: ghcr.io/wesleyklop/wesley.io:v0.5.2
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 16Mi
          ports:
            - containerPort: 80
