apps/wesley-site/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wesley-site
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
